# ChangeLog for dev-ruby/zentest
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.142 2014/07/18 08:01:00 graaff Exp $

  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> -zentest-4.9.5-r1.ebuild:
  Cleanup.

  02 Jul 2014; Manuel Rüger <mrueg@gentoo.org> -zentest-4.9.4-r1.ebuild:
  Cleanup old.

  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> zentest-4.9.5.ebuild:
  Stable on alpha, bug #490180

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> zentest-4.9.5.ebuild:
  x86 stable wrt bug #490180

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> zentest-4.9.5.ebuild:
  ia64 stable wrt bug #490180

*zentest-4.10.0 (25 Apr 2014)

  25 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +zentest-4.10.0.ebuild:
  Version bump.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> zentest-4.7.0.ebuild,
  zentest-4.9.4-r1.ebuild, zentest-4.9.5.ebuild:
  Remove ree18 and ruby18 target.

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> zentest-4.9.5.ebuild:
  Stable for HPPA (bug #490180).

  21 Mar 2014; Hans de Graaff <graaff@gentoo.org> zentest-4.9.5-r1.ebuild:
  Really add ruby21. Drop ruby18.

*zentest-4.9.5-r1 (21 Mar 2014)

  21 Mar 2014; Hans de Graaff <graaff@gentoo.org> +zentest-4.9.5-r1.ebuild:
  Revision bump for ruby21. Build documentation directly to work around hoe
  incompatibilities.

  16 Mar 2014; Markus Meier <maekke@gentoo.org> zentest-4.9.5.ebuild:
  arm stable, bug #490180

  01 Feb 2014; Akinori Hattori <hattya@gentoo.org> zentest-4.9.4-r1.ebuild:
  ia64 stable wrt bug #490180

  29 Dec 2013; Markus Meier <maekke@gentoo.org> zentest-4.9.4-r1.ebuild:
  arm stable, bug #490180

  26 Dec 2013; Markus Meier <maekke@gentoo.org> zentest-4.7.0.ebuild:
  arm stable, bug #493780

  09 Nov 2013; Jeroen Roovers <jer@gentoo.org> zentest-4.9.4-r1.ebuild:
  Stable for HPPA (bug #490180).

*zentest-4.9.5 (03 Nov 2013)
