@@ -1,0 +1,29 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-4.10.1.ebuild,v 1.1 2014/07/18 08:07:59 graaff Exp $
+
+EAPI=5
+
+USE_RUBY="ruby19 ruby20 ruby21 jruby"
+
+RUBY_FAKEGEM_NAME=ZenTest
+
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
+RUBY_FAKEGEM_EXTRADOC="README.txt History.txt example.txt example1.rb example2.rb example_dot_autotest.rb"
+
+inherit ruby-fakegem
+
+DESCRIPTION="ZenTest provides tools to support testing: zentest, unit_diff, autotest, multiruby, and Test::Rails"
+HOMEPAGE="https://github.com/seattlerb/zentest"
+LICENSE="Ruby"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+SLOT="0"
+IUSE=""
+
+ruby_add_bdepend "
+	test? (
+		>=dev-ruby/hoe-2.10
+		dev-ruby/hoe-seattlerb
+		virtual/ruby-minitest
+	)"
