@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/zentest
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.142 2014/07/18 08:01:00 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.143 2014/07/18 08:07:59 graaff Exp $
+
+*zentest-4.10.1 (18 Jul 2014)
+
+  18 Jul 2014; Hans de Graaff <graaff@gentoo.org> +zentest-4.10.1.ebuild:
+  Version bump.
 
   18 Jul 2014; Hans de Graaff <graaff@gentoo.org> -zentest-4.9.5-r1.ebuild:
   Cleanup.
